working commit
Signed-off-by: Rajat Gupta <gptrajat@amazon.com>